Update Notice and Notice Board

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
     "@szhsin/react-accordion": "^1.2.3",
+    "aos": "^3.0.0-beta.6",
     "firebase": "^10.11.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
